classDiagram
  class Usuario {
    id
    nome
    email
    role
    ativo
  }
  class Cliente {
    telefone
    cpf
    consentimentoFidelidade
  }
  class Unidade {
    nome
    cidade
    endereco
    ativa
  }
  class Produto {
    nome
    descrição
    preço
    ativo
  }
  class Estoque {
    quantidadeAtual
    quantidadeMinima
  }
  class Pedido {
    canalPedido
    status
    total
  }
  class ItemPedido {
    quantidade
    preçoUnitario
    subtotal
  }
  class Pagamento {
    formaPagamento
    status
    providerMockId
  }
  class Fidelidade {
    saldoPontos
  }
  class Auditoria {
    ação
    recurso
    detalhes
  }

  Usuario "1" --> "0..1" Cliente
  Cliente "1" --> "*" Pedido
  Pedido "1" --> "*" ItemPedido
  Pedido "1" --> "1" Pagamento
  Unidade "1" --> "*" Pedido
  Unidade "1" --> "*" Estoque : possui
  Produto "1" --> "*" ItemPedido
  Produto "1" --> "*" Estoque : compõe
  Cliente "1" --> "1" Fidelidade
  Usuario "1" --> "*" Auditoria
